fixed align

--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -13,7 +13,7 @@
     width: 186.25px;
     height: 40px;
     background-color: #4a4c51;
-    margin-top: -40px;
+    margin-top: -39px;
     border-radius: 10px;
     margin-left: 201.25px;
 }
@@ -22,7 +22,7 @@
     width: 186.25px;
     height: 40px;
     background-color: #4a4c51;
-    margin-top: -40px;
+    margin-top: -38px;
     border-radius: 10px;
     margin-left: 200px;
     margin-right: 15px
@@ -32,7 +32,7 @@
     width: 186.25px;
     height: 40px;
     background-color: #4a4c51;
-    margin-top: -40px;
+    margin-top: -38px;
     border-radius: 10px;
     margin-left: 200px;
     margin-right: 15px
